sửa lỗi chụp ảnh

--- a/.github/workflows/auto-screenshot.yml
+++ b/.github/workflows/auto-screenshot.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
 
       - name: Take Screenshot
-        run: node screenshot.js
+        run: node extra/scripts/screenshot.js
 
       - name: Commit and Push Image
         uses: stefanzweifel/git-auto-commit-action@v5
