--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "capture": "node extra/scripts/screenshot.js"
   },
   "dependencies": {
-    "puppeteer": "^21.0.0"
+    "puppeteer": ">24.15.0"
   }
 }
