Bổ sung nội dung trang web và sửa lỗi Action nhảy linh tinh

--- a/.github/workflows/auto-screenshot.yml
+++ b/.github/workflows/auto-screenshot.yml
@@ -2,13 +2,19 @@ name: Generate OG Image
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: ["main"]
     paths:
       - 'index.html' # Chỉ chạy khi file html thay đổi
       - 'extra/scripts/screenshot.js'
       - '.github/workflows/auto-screenshot.yml'
+
+    # Cho phép tự chạy bằng tay
+  workflow_dispatch:
+
+# Chỉ chạy một lượt một lần, cho phép hủy ngang khi cần thiết.
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   screenshot:
@@ -36,3 +42,27 @@ jobs:
         with:
           commit_message: "BOT: Auto-update OG Image"
           file_pattern: 'extra/og-image.png'
+
+  deploy:
+    needs: screenshot
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
