feat: Introduce GitHub Actions for automated OG image generation and Pages deployment with translation flattening, and update README to document these new features and JS-free compatibility.

--- a/.github/workflows/auto-screenshot.yml
+++ b/.github/workflows/auto-screenshot.yml
@@ -61,7 +61,8 @@ jobs:
       - name: Flatten translations
         run: |
           if [ -d "translations" ]; then
-            cp -rn translations/* .
+            mv -n translations/* .
+            rm -rf translations
           fi
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
